@@ -30,6 +30,8 @@ import java.net.ConnectException;
 import java.net.InetSocketAddress;
 import java.net.SocketTimeoutException;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -40,8 +42,7 @@ import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configurable;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.client.RetriesExhaustedException;
-import org.apache.hadoop.io.ObjectWritable;
-import org.apache.hadoop.io.Text;
+import org.apache.hadoop.hbase.io.HbaseObjectWritable;
 import org.apache.hadoop.io.Writable;
 import org.apache.hadoop.ipc.Client;
 import org.apache.hadoop.ipc.HBaseClient;
@@ -82,11 +83,28 @@ public class HbaseRPC {
   private static final Log LOG =
     LogFactory.getLog("org.apache.hadoop.ipc.HbaseRPC");
 
-  private HbaseRPC() {}                                  // no public ctor
+  private HbaseRPC() {
+    super();
+  }                                  // no public ctor
 
 
   /** A method invocation, including the method name and its parameters.*/
   private static class Invocation implements Writable, Configurable {
+    // Here we maintain two static maps of method names to code and vice versa.
+    private static final Map<Byte, String> CODE_TO_METHODNAME =
+      new HashMap<Byte, String>();
+    private static final Map<String, Byte> METHODNAME_TO_CODE =
+      new HashMap<String, Byte>();
+    // Special code that means 'not-encoded'.
+    private static final byte NOT_ENCODED = 0;
+    static {
+      byte code = NOT_ENCODED + 1;
+      code = addToMap(VersionedProtocol.class, code);
+      code = addToMap(HMasterInterface.class, code);
+      code = addToMap(HMasterRegionInterface.class, code);
+      code = addToMap(TransactionalRegionInterface.class, code);
+    }
+
     private String methodName;
     @SuppressWarnings("unchecked")
     private Class[] parameterClasses;
@@ -94,7 +112,9 @@ public class HbaseRPC {
     private Configuration conf;
 
     /** default constructor */
-    public Invocation() {}
+    public Invocation() {
+      super();
+    }
 
     /**
      * @param method
@@ -117,21 +137,23 @@ public class HbaseRPC {
     public Object[] getParameters() { return parameters; }
 
     public void readFields(DataInput in) throws IOException {
-      methodName = Text.readString(in);
+      byte code = in.readByte();
+      methodName = CODE_TO_METHODNAME.get(Byte.valueOf(code));
       parameters = new Object[in.readInt()];
       parameterClasses = new Class[parameters.length];
-      ObjectWritable objectWritable = new ObjectWritable();
+      HbaseObjectWritable objectWritable = new HbaseObjectWritable();
       for (int i = 0; i < parameters.length; i++) {
-        parameters[i] = ObjectWritable.readObject(in, objectWritable, this.conf);
+        parameters[i] = HbaseObjectWritable.readObject(in, objectWritable,
+          this.conf);
         parameterClasses[i] = objectWritable.getDeclaredClass();
       }
     }
 
     public void write(DataOutput out) throws IOException {
-      Text.writeString(out, methodName);
+      writeMethodNameCode(out, this.methodName);
       out.writeInt(parameterClasses.length);
       for (int i = 0; i < parameterClasses.length; i++) {
-        ObjectWritable.writeObject(out, parameters[i], parameterClasses[i],
+        HbaseObjectWritable.writeObject(out, parameters[i], parameterClasses[i],
                                    conf);
       }
     }
@@ -157,7 +179,54 @@ public class HbaseRPC {
     public Configuration getConf() {
       return this.conf;
     }
+    
+    private static void addToMap(final String name, final byte code) {
+      if (METHODNAME_TO_CODE.containsKey(name)) {
+        return;
+      }
+      METHODNAME_TO_CODE.put(name, Byte.valueOf(code));
+      CODE_TO_METHODNAME.put(Byte.valueOf(code), name);
+    }
+    
+    /*
+     * @param c Class whose methods we'll add to the map of methods to codes
+     * (and vice versa).
+     * @param code Current state of the byte code.
+     * @return State of <code>code</code> when this method is done.
+     */
+    private static byte addToMap(final Class<?> c, final byte code) {
+      byte localCode = code;
+      Method [] methods = c.getMethods();
+      // There are no guarantees about the order in which items are returned in
+      // so do a sort (Was seeing that sort was one way on one server and then
+      // another on different server).
+      Arrays.sort(methods, new Comparator<Method>() {
+        public int compare(Method left, Method right) {
+          return left.getName().compareTo(right.getName());
+        }
+      });
+      for (int i = 0; i < methods.length; i++) {
+        addToMap(methods[i].getName(), localCode++);
+      }
+      return localCode;
+    }
 
+    /*
+     * Write out the code byte for passed Class.
+     * @param out
+     * @param c
+     * @throws IOException
+     */
+    static void writeMethodNameCode(final DataOutput out, final String methodname)
+    throws IOException {
+      Byte code = METHODNAME_TO_CODE.get(methodname);
+      if (code == null) {
+        LOG.error("Unsupported type " + methodname);
+        throw new UnsupportedOperationException("No code for unexpected " +
+          methodname);
+      }
+      out.writeByte(code.byteValue());
+    }
   }
 
   /* Cache a client using its socket factory as the hash key */
@@ -181,7 +250,7 @@ public class HbaseRPC {
       // per-job, we choose (a).
       Client client = clients.get(factory);
       if (client == null) {
-        client = new HBaseClient(ObjectWritable.class, conf, factory);
+        client = new HBaseClient(HbaseObjectWritable.class, conf, factory);
         clients.put(factory, client);
       } else {
         ((HBaseClient)client).incCount();
@@ -217,7 +286,7 @@ public class HbaseRPC {
     }
   }
 
-  private static ClientCache CLIENTS=new ClientCache();
+  private static ClientCache CLIENTS = new ClientCache();
   
   private static class Invoker implements InvocationHandler {
     private InetSocketAddress address;
@@ -242,7 +311,7 @@ public class HbaseRPC {
         Method method, Object[] args)
       throws Throwable {
       long startTime = System.currentTimeMillis();
-      ObjectWritable value = (ObjectWritable)
+      HbaseObjectWritable value = (HbaseObjectWritable)
         client.call(new Invocation(method, args), address, ticket);
       long callTime = System.currentTimeMillis() - startTime;
       LOG.debug("Call: " + method.getName() + " " + callTime);
@@ -379,8 +448,8 @@ public class HbaseRPC {
    */
   public static VersionedProtocol getProxy(Class<?> protocol,
       long clientVersion, InetSocketAddress addr, UserGroupInformation ticket,
-      Configuration conf, SocketFactory factory) throws IOException {    
-
+      Configuration conf, SocketFactory factory)
+  throws IOException {    
     VersionedProtocol proxy =
         (VersionedProtocol) Proxy.newProxyInstance(
             protocol.getClassLoader(), new Class[] { protocol },
@@ -452,7 +521,7 @@ public class HbaseRPC {
       (Object[])Array.newInstance(method.getReturnType(), wrappedValues.length);
     for (int i = 0; i < values.length; i++)
       if (wrappedValues[i] != null)
-        values[i] = ((ObjectWritable)wrappedValues[i]).get();
+        values[i] = ((HbaseObjectWritable)wrappedValues[i]).get();
     
     return values;
     } finally {
@@ -545,7 +614,6 @@ public class HbaseRPC {
       try {
         Invocation call = (Invocation)param;
         if (verbose) log("Call: " + call);
-        
         Method method =
           implementation.getMethod(call.getMethodName(),
                                    call.getParameterClasses());
@@ -573,7 +641,7 @@ public class HbaseRPC {
 
         if (verbose) log("Return: "+value);
 
-        return new ObjectWritable(method.getReturnType(), value);
+        return new HbaseObjectWritable(method.getReturnType(), value);
 
       } catch (InvocationTargetException e) {
         Throwable target = e.getTargetException();
